the footer update

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   <!-- EVERYTHING STARTS HERE -->
   <body class="text-white-800 antialiased">
     <nav
-      class="container w-screen h-24 bg-red-600 navbar-expand-lg"
+      class="w-auto h-18 bg-red-600 px-4"
     >
       <div
-        class="w-auto px-auto flex items-center flex-wrap justify-between bg-red-600"
+        class="w-auto flex items-center flex-wrap justify-between bg-red-600 px-12"
       >
         <li class="inline-block">
             <a href="./radio.html">
@@ -38,15 +38,16 @@
             src="./assets/njata3d.png"
             /></a>
         </li>
-        <li>
+        <li class="inline-block">
           <button
-            class="bg-white text-gray-800 active:bg-gray-100 text-xs font-bold uppercase px-4 py-3 rounded shadow hover:shadow-md outline-none focus:outline-none lg:mr-1 lg:mb-0 ml-3 mb-3"
+            class="bg-white text-gray-800 active:bg-gray-100 text-xs font-bold uppercase px-4 py-3 ml-24 rounded shadow hover:shadow-md outline-none focus:outline-none lg:mr-1 lg:mb-0 ml-3 mb-1.5"
             type="button"
             style="transition: all 0.15s ease 0s;"
           >
-            NjataTV Live
+            Njata TV Live
           </button>
         </li>
+
         <div
           class="lg:flex flex-grow items-center lg:shadow-none hidden"
           id="example-collapse-navbar"
@@ -55,7 +56,7 @@
             <li class="flex items-center">
               <a
                 class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="#pablo"
+                href="#njatafacebook"
                 ><i
                   class="lg:text-gray-300 text-gray-500 fab fa-facebook text-lg leading-lg "
                 ></i
@@ -65,7 +66,7 @@
             <li class="flex items-center">
               <a
                 class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="#pablo"
+                href="#njatatwitter"
                 ><i
                   class="lg:text-gray-300 text-gray-500 fab fa-twitter text-lg leading-lg "
                 ></i
@@ -75,7 +76,7 @@
             <li class="flex items-center">
               <a
                 class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="#pablo"
+                href="#njatayoutube"
                 ><i
                   class="lg:text-gray-300 text-gray-500 fab fa-youtube text-lg leading-lg "
                 ></i
@@ -91,10 +92,10 @@
     <main>
       <!-- logo and video starts here!! -->
       <div
-      class="relative pt-4 pb-2 flex content-center justify-center bg-gray-300"
+      class="relative flex content-center justify-center bg-gray-300"
       style="min-height: 75vh;"
       >
-        <div class="border border-red-500 mt-5">
+          <div class="border border-black-600 my-0">
                 <div class="w-full border bg-black border-black-600">
                     <iframe style="max-width: 100%; max-height: 100%;" 
                       src="https://jengadj.co.ke/live/1/Njata+tv&amp;embed=1" 
@@ -115,7 +116,7 @@
                   src="./assets/njatafm.jpg"
                   /></a>
                 </div>
-                <div class="bg-black w-auto mt-10 inline-block">
+                <div class="bg-black w-auto inline-block">
                   <audio controls>
                     <source src="movie.mp4" type="video/mp4">
                     <source src="movie.ogg" type="video/ogg">
@@ -124,34 +125,7 @@
                 </div>
               </div> 
             </div>
-          </div>
-          </div>
-      </div>
-
-        <!-- <div
-          class="absolute top-0 w-full h-full bg-center bg-cover"
-        >
-         <span
-            id="blackOverlay"
-            class="w-full h-full absolute opacity-50 bg-black"
-          ></span>
-        </div> -->
-
-          <!-- video section starts here -->
-        <div class="container relative mx-auto">
-          <div class="items-center flex flex-wrap">
-            <div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center">
-              <div class="pr-12">
-              </div>
-            </div>
-          </div>
         </div>
-        <div
-          class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden"
-          style="height: 70px; transform: translateZ(0px);"
-        >
-        </div>
-      </div>
     </main>
 
     <footer class="relative bg-blue-500 pt-8 pb-6">
@@ -188,7 +162,7 @@
 
           <div class="w-full lg:w-8/12 px-40">
             <div class="flex flex-wrap items-top mb-6">
-              <div class="w-full lg:w-8/12 px-40 ml-auto">
+              <div class="w-full lg:w-8/12 px-2 ml-2">
                 <span
                   class="block uppercase text-white text-lg font-semibold mb-2"
                   >NJATA TV CHANNELS.</span
@@ -228,7 +202,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="w-full lg:w-4/12 px-3">
+              <div class="w-full lg:w-3/12 px-3">
                 <span
                   class="block uppercase text-white text-lg font-semibold mb-2"
                   >NJATA FM COVERAGE.</span
