--- a/radio.html
+++ b/radio.html
@@ -24,14 +24,23 @@
   <!-- EVERYTHING STARTS HERE -->
   <body class="text-white-800 antialiased">
     <nav
-      class=" absolute z-50 w-full h-16 flex flex-wrap items-center justify-between bg-red-600 px-2 py-1 navbar-expand-lg "
+      class="w-auto h-18 bg-red-600 px-4"
     >
       <div
-        class="container px-4 py-2 mx-auto my-1 flex flex-wrap items-center justify-between"
+        class="w-auto flex items-center flex-wrap justify-between bg-red-600 px-12"
       >
-      <li class="flex items-center">
+        <li class="inline-block">
+            <a href="./radio.html">
+            <img
+            alt="..."
+            width="70"
+            height="70"
+            src="./assets/njata3d.png"
+            /></a>
+        </li>
+        <li class="inline-block">
         <button
-          class="bg-white text-gray-800 active:bg-gray-100 text-xs font-bold uppercase px-4 py-3 rounded shadow hover:shadow-md outline-none focus:outline-none lg:mr-1 lg:mb-0 ml-3 mb-3"
+          class="bg-white text-gray-800 active:bg-gray-100 text-xs font-bold uppercase px-4 py-3 rounded shadow hover:shadow-md outline-none focus:outline-none lg:mr-1 lg:mb-0 ml-3 mb-1.5"
           type="button"
           style="transition: all 0.15s ease 0s;"
         >
@@ -46,7 +55,7 @@
             <li class="flex items-center">
               <a
                 class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="#pablo"
+                href="#njatafacebook"
                 ><i
                   class="lg:text-gray-300 text-gray-500 fab fa-facebook text-lg leading-lg "
                 ></i
@@ -56,7 +65,7 @@
             <li class="flex items-center">
               <a
                 class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="#pablo"
+                href="#njatatwitter"
                 ><i
                   class="lg:text-gray-300 text-gray-500 fab fa-twitter text-lg leading-lg "
                 ></i
@@ -66,7 +75,7 @@
             <li class="flex items-center">
               <a
                 class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="#pablo"
+                href="#njatayoutube"
                 ><i
                   class="lg:text-gray-300 text-gray-500 fab fa-youtube text-lg leading-lg "
                 ></i
@@ -82,20 +91,28 @@
     <main>
       <!-- logo and video starts here!! -->
         <div
-        class="relative pt-12 pb-1 w-full flex justify-center bg-gray-300"
+        class="relative w-full flex justify-center bg-gray-300"
         style="min-height: 75vh;">
             <div class="w-screen h-auto bg-black ">
-                <div class="inline-block flex flex-row flex-auto justify-center border border-red-500 mt-5">
+                <div class="inline-block flex flex-row flex-auto justify-center border border-black-500">
                         <img
                         alt="njata fm header-image right here"
-                        width="1200"
-                        height=""
+                        width="1400"
+                        height="1400"
                         src="./assets/headerpic.jpeg"
                         />
                 </div>
 
                 <div class="border bg-black border-black-600">
-                    <div class="bg-black w-auto mt-10 inline-block">
+                  <div class="inline-block">
+                    <img
+                    alt="..."
+                    width="90"
+                    height="90"
+                    src="./assets/njatafm.jpg"
+                    />
+                  </div>
+                    <div class="bg-black w-auto inline-block">
                         <audio controls>
                             <source src="movie.mp4" type="video/mp4">
                         </audio>
@@ -103,25 +120,9 @@
                 </div> 
             </div>
       </div>
-
-          <!-- video section starts here -->
-        <div class="container relative mx-auto">
-          <div class="items-center flex flex-wrap">
-            <div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center">
-              <div class="pr-12">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div
-          class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden"
-          style="height: 70px; transform: translateZ(0px);"
-        >
-        </div>
-      </div>
     </main>
 
-    <footer class="relative bg-blue-500 pt-8 pb-6">
+    <footer class="relative bg-blue-500 pt-8 pb-0">
       <div
         class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
         style="height: 80px; transform: translateZ(0px);"
@@ -155,7 +156,7 @@
 
           <div class="w-full lg:w-8/12 px-40">
             <div class="flex flex-wrap items-top mb-6">
-              <div class="w-full lg:w-8/12 px-40 ml-auto">
+              <div class="w-full lg:w-8/12 px-2 ml-2">
                 <span
                   class="block uppercase text-white text-lg font-semibold mb-2"
                   >NJATA TV CHANNELS.</span
@@ -195,7 +196,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="w-full lg:w-4/12 px-3">
+              <div class="w-full lg:w-3/12 px-3">
                 <span
                   class="block uppercase text-white text-lg font-semibold mb-2"
                   >NJATA FM COVERAGE.</span
